# Pyhon_for_Data_Analytics

./: README.md  gettin_web_data.ipynb  pyproject.toml  visualization.ipynb  web_data.ipynb
datasets/: covid_geo.csv  customers.xlsx
exercises/: Pandas_df_and_series.ipynb  covid_geo.ipynb  gettin_web_data.ipynb  working_with_excel.ipynb
