[tool.poetry]
name = "pyhon_for_data_analytics"
version = "0.1.0"
description = ""
authors = ["Annq-Dvoskina <anna.dvoskina@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
