[tool.poetry]
name = "pyhon_for_data_analytics"
version = "0.1.0"
description = ""
authors = ["Annq-Dvoskina <anna.dvoskina@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
jupyter = "^1.0.0"
numpy = "^1.23.2"
openpyxl = "^3.0.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
bs4 = "^0.0.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
